<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linkslayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frontcover"
    android:orientation="horizontal"
    tools:context=".MainActivity$DummySectionFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/translucent_brown"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/facebooklogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/contentdesc_facebook"
                    android:onClick="linkClicked"
                    android:src="@drawable/facebooklogo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|center_horizontal" >

                    <ImageView
                        android:id="@+id/youtubelogo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/contentdesc_youtube"
                        android:onClick="linkClicked"
                        android:src="@drawable/youtubelogo" />

                    <ImageView
                        android:id="@+id/soundcloudlogo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/contentdesc_soundcloud"
                        android:onClick="linkClicked"
                        android:src="@drawable/soundcloudlogo" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <ImageView
                        android:id="@+id/bandcamplogo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/contentdesc_bandcamp"
                        android:onClick="linkClicked"
                        android:src="@drawable/bandcamplogo" />

                    <ImageView
                        android:id="@+id/twitterlogo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/contentdesc_twitter"
                        android:onClick="linkClicked"
                        android:src="@drawable/twitterlogo" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>